Fixed bug with code not wrapping.

--- a/assets/styles/syntax.sass
+++ b/assets/styles/syntax.sass
@@ -2,6 +2,7 @@
 ---
 code
 	font-family: ui-monospace
+	line-break: anywhere
 
 // Inline code
 code.highlighter-rouge
